--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer id="footer" class="footer">
 	<a class="nav-footer-link" href="#">Submit event</a>
 	<a class="nav-footer-link" href="#">Contact</a>
 	<a class="nav-footer-link" href="#">Privacy</a>
