--- a/client/src/app/components/footer/footer.component.css
+++ b/client/src/app/components/footer/footer.component.css
@@ -1,11 +1,10 @@
 .footer {
 	margin-top: 80px;
 	padding-top: 10px;
-	padding-bottom: 10px;
+	margin-bottom: 10px;
 	height: 40px;
-	bottom: 0;
 	border-top: 1px solid #dedede;
-	/*background-color: #fdfdfd;*/
+    transition: none;
 }
 
 .nav-footer-link{
