--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -8,6 +8,11 @@ body {
 	background-color: #f8f8fe;
 }
 
+.btn-primary:disabled {
+	background-color: #868e96 !important; /* overrides bootstrap setting */
+	border-color: #868e96 !important; /* overrides bootstrap setting */
+}
+
 .page-header{
 	pointer-events: none;
 	user-select: none;
