--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -12,7 +12,7 @@
   <!-- Username Field -->
   <div class="form-group">
     <div [ngClass]="{'has-error': form.controls.username.errors && form.controls.username.dirty, 'has-success': form.controls.username.valid && form.controls.username.dirty }">
-      <input class="form-control" type="text" name="username" formControlName="username" placeholder="Username" />
+      <input id="username" class="form-control" type="text" name="username" formControlName="username" placeholder="Username" [autofocus]="true" />
     </div>
   </div>
 
