--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -47,7 +47,7 @@
       </div>
     </div>
   </div>
-  <input [disabled]="!form.valid || processing || !emailValid || !usernameValid" type="submit" class="btn btn-primary" value="Register">
+  <input [disabled]="!form.valid || processing || !emailValid || !usernameValid" type="submit" class="btn btn-primary" value="Register" disabled>
 </form>﻿
 
 <!-- <p>username: {{ form.controls.username.value }}</p>
