--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <h5 class="page-header">Login</h5>
 
 <!-- Custom Success/Error Message -->
-<div class="row show-hide-message">
+<div class="row">
   <div [ngClass]="messageClass">
     {{ message }}
   </div>
