--- a/client/src/app/components/navbar/navbar.component.css
+++ b/client/src/app/components/navbar/navbar.component.css
@@ -42,6 +42,7 @@
 	margin-top: 1px;
 	color: #555;
 	font-weight: 600;
+	cursor: pointer;
 	opacity: 0.9;
 	/*border: 1px solid #12778b;
     border-radius: 5px;*/
