--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -29,7 +29,7 @@
           <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
           <a class="nav-link" routerLink="/login">Login</a>
           </li>
-          <li *ngIf="authService.loggedIn()" class="nav-item"><a class="nav-link" href="#" (click)="onLogoutClick()">Logout</a></li>
+          <li *ngIf="authService.loggedIn()" class="nav-item"><a class="nav-link" (click)="onLogoutClick()">Logout</a></li>
         </ul>
           <!-- <div class="input-group">
 		    <span class="input-group-addon" id="basic-addon1"><i class="fa fa-search" aria-hidden="true"></i></span>
