--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -1,10 +1,11 @@
 <h5 class="page-header">Registration</h5>
 
-<div class="row show-hide-message">
+<div class="row">
   <div [ngClass]="messageClass">
     {{ message }}
   </div>
 </div>
+
 <form [formGroup]="form" (submit)="onRegisterSubmit()" class="form-reg">
   <div class="form-group">
     <div [ngClass]="{'has-error': (form.controls.username.errors && form.controls.username.dirty) || (!usernameValid && form.controls.username.dirty), 'has-success': !form.controls.username.errors && usernameValid}">
