--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-navbar></app-navbar>
-
-<div class="container">
+<div id="body-container" class="container">
   <flash-messages></flash-messages>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
