--- a/client/src/app/components/login/login.component.css
+++ b/client/src/app/components/login/login.component.css
@@ -2,6 +2,20 @@
 	width: 250px;
 }
 
+.has-error {
+	color: red;
+	transition: none;
+}
+
+.has-success {
+	color: green;
+	transition: none;
+}
+
 .has-success input {
 	border: 2px solid #00cd9a;
+}
+
+.has-error input {
+	border: 1px solid #e60039;
 }
