--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -11,15 +11,15 @@
 <form [formGroup]="form" (submit)="onLoginSubmit()" class="form-log">
   <!-- Username Field -->
   <div class="form-group">
-    <div [ngClass]="{'has-error': form.controls.username.errors && form.controls.username.dirty, 'has-success': form.controls.username.valid && form.controls.username.dirty }">
-      <input id="username" class="form-control" type="text" name="username" formControlName="username" placeholder="Username" [autofocus]="true" />
+    <div [ngClass]="{'has-error': (logerr || form.controls.username.errors) && form.controls.username.dirty, 'has-success': !logerr && form.controls.username.valid && form.controls.username.dirty }">
+      <input id="username" class="form-control" type="text" name="username" formControlName="username" placeholder="Username" [autofocus]="true" (ngModelChange)="resetLogerr()">
     </div>
   </div>
 
   <!-- Password Field  -->
   <div class="form-group">
-    <div [ngClass]="{'has-error': form.controls.password.errors && form.controls.password.dirty, 'has-success': form.controls.password.valid && form.controls.password.dirty }">
-      <input class="form-control" type="password" name="password" formControlName="password" placeholder="Password" />
+    <div [ngClass]="{'has-error': (logerr || form.controls.password.errors) && form.controls.password.dirty, 'has-success': !logerr && form.controls.password.valid && form.controls.password.dirty }">
+      <input class="form-control" type="password" name="password" formControlName="password" placeholder="Password" (ngModelChange)="resetLogerr()">
     </div>
   </div>
   <!-- Submit Button -->
