--- a/client/src/app/components/navbar/navbar.component.css
+++ b/client/src/app/components/navbar/navbar.component.css
@@ -1,13 +1,23 @@
 .navbar{
 	position: fixed;
-	border-bottom: 1px solid #dedede;
-	background-color: #fefefe;
-	padding: 0 50px 0 50px;
+	/*border-bottom: 1px solid #dedede;*/
+	/*background-color: #fefefe;*/
+	background-color: #f8f8fe;
+	padding: 25px 50px 0 50px;
 	height: 55px;
 	width: 100%;
 	transition-delay: 1s;
 	opacity: 0.95;
 	z-index: 100;
+}
+
+.container{
+	height: 60px;
+}
+
+.nav-border{
+	border-bottom: 1px solid #dedede;
+	transition: none;
 }
 
 .alert-info p{
@@ -20,6 +30,11 @@
 .headroom--pinned {
     transform: translateY(0%);
 }
+
+.headroom--not-top {
+	padding: 0 50px 0 50px;
+}
+
 .headroom--unpinned {
     transform: translateY(-100%);
 }
