--- a/client/src/app/components/navbar/navbar.component.css
+++ b/client/src/app/components/navbar/navbar.component.css
@@ -3,7 +3,7 @@
 	/*border-bottom: 1px solid #dedede;*/
 	/*background-color: #fefefe;*/
 	background-color: #f8f8fe;
-	padding: 25px 50px 0 50px;
+	padding: 25px 80px 0 80px;
 	height: 55px;
 	width: 100%;
 	transition-delay: 1s;
@@ -32,7 +32,7 @@
 }
 
 .headroom--not-top {
-	padding: 0 50px 0 50px;
+	padding-top: 0;
 	border-bottom: 1px solid #dedede;
 }
 
