--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
   <h1>MEAN Stack Application</h1>
   <p class="lead">Welcome to the MEAN Stack Application by <strong>David Acosta</strong></p>
   <div>
-    <a routerLink="/register" class="btn btn-primary">Register</a>
+    <a routerLink="/register" class="btn btn-info">Register</a>
     <a routerLink="/login" href="#" class="btn btn-default">Login</a>
   </div>
 </div>
