--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -23,5 +23,5 @@
     </div>
   </div>
   <!-- Submit Button -->
-  <input [disabled]="!form.valid || processing" class="btn btn-primary" type="submit" value="Login" disabled>
+  <input [disabled]="!form.valid || processing || logerr" class="btn btn-info" type="submit" value="Login" disabled>
 </form>
