--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -2,8 +2,9 @@
   <h1>MEAN Stack Application</h1>
   <p class="lead">Welcome to the MEAN Stack Application by <strong>David Acosta</strong></p>
   <div>
-    <a routerLink="/register" class="btn btn-info">Register</a>
-    <a routerLink="/login" href="#" class="btn btn-default">Login</a>
+    <a *ngIf="!authService.loggedIn()" routerLink="/register" class="btn btn-info">Register</a>
+    <a *ngIf="!authService.loggedIn()" routerLink="/login" href="#" class="btn btn-default">Login</a>
+    <a *ngIf="authService.loggedIn()" routerLink="/blog" href="#" class="btn btn-info">Blog</a>
   </div>
 </div>
 
