expose getblogs to public

--- a/client/src/app/components/blog/blog.component.html
+++ b/client/src/app/components/blog/blog.component.html
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<button type="button" name="button" class="btn btn-sm btn-warning" *ngIf="!newPost" (click)="newBlogForm()"><span class="fa fa-pencil-square-o"></span>New</button>
+<button type="button" name="button" class="btn btn-sm btn-warning" *ngIf="username && !newPost" (click)="newBlogForm()"><span class="fa fa-pencil-square-o"></span>New</button>
 
 <button [disabled]="loadingBlogs" type="button" name="button" class="btn btn-sm btn-secondary" *ngIf="!newPost" (click)="reloadBlogs()">
 <span class="fa fa-refresh"></span>Refresh</button>
@@ -57,7 +57,7 @@
     	<div class="card-footer">
     		<small class="text-muted"><strong>{{ blog.createdBy }}</strong></small>
     		<small class="text-muted"> on {{ blog.createdAt | date: 'dd MMM yyyy'}} </small>
-    		<span *ngIf="username === blog.createdBy">
+    		<span *ngIf="!username || (username === blog.createdBy)">
     		<span class="dropdown">
     			<button disabled type="button" name="button" class="btn btn-sm btn-outline-success owner">
     			<span class="fa fa-thumbs-up"></span>{{ blog.likes }}</button>
@@ -77,7 +77,7 @@
     		</span>
     		</span>
     		
-    		<span *ngIf="username !== blog.createdBy">
+    		<span *ngIf="username && (username !== blog.createdBy)">
     		<span class="dropdown">
     			<button type="button" name="button" class="btn btn-sm btn-nobg" *ngIf="username !== blog.createdBy">
     			<span class="fa fa-thumbs-up"></span>13</button>
@@ -97,8 +97,8 @@
     		</span>
     		</span>
 
-    		<button type="button" name="button" class="btn btn-sm btn-nobg" (click)="draftComment()">
-    		<span class="fa fa-comments-o"></span>Comment</button>
+    		<button type="button" name="button" class="btn btn-sm btn-nobg" *ngIf="username" (click)="draftComment()">
+    		<span class="fa fa-comments-o" *ngIf="username"></span>Comment</button>
     		<!-- <form>
     			<textarea name="comment" rows="10" cols="30" class="form-control"></textarea>
     			<button type="button" name="button" class="btn btn-sm btn-info">summit</button>
