--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -8,6 +8,17 @@ body {
 	background-color: #f8f8fe;
 }
 
+.overlay{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	opacity: 0.4;
+	z-index: 1050;
+}
+
 .btn-primary:disabled, .btn-info:disabled{
 	background-color: #868e96;
 	border-color: #868e96;
