--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -1,5 +1,11 @@
 <h5 class="page-header">Profile</h5>
 
+<div class="row" *ngIf="message">
+  <div [ngClass]="messageClass">
+    {{ message }}
+  </div>
+</div>
+
 <ul class="list-group">
 	<li class="list-group-item">username: {{ username }}</li>
 	<li class="list-group-item">email: {{ email }}</li>
