--- a/client/src/app/components/blog/edit-blog/edit-blog.component.css
+++ b/client/src/app/components/blog/edit-blog/edit-blog.component.css
@@ -1,3 +1,36 @@
 .btn-sm{
 	padding: .12rem .25rem;
 }
+
+.form-group{
+	width: 920px;
+}
+
+.form-error-msg{
+	width: 350px;
+	margin-top: 10px;
+	transition: none;
+}
+
+.form-error-msg .fa{
+	padding-right: 10px;
+	transition: none;
+}
+
+.has-error{
+	color: red;
+	transition: none;
+}
+
+.has-success{
+	color: green;
+	transition: none;
+}
+
+.has-success input, .has-success textarea{
+	border: 2px solid #00cd9a;
+}
+
+.has-error input, .has-error textarea{
+	border: 1px solid #e60039;
+}
