fix edit blog submit button

--- a/client/src/app/components/blog/edit-blog/edit-blog.component.html
+++ b/client/src/app/components/blog/edit-blog/edit-blog.component.html
@@ -36,5 +36,5 @@
 		<button [disabled]="processing" type="button" name="button" class="btn btn-sm btn-danger">Delete</button>
 	</a>
 <!-- 	<button [disabled]="processing" type="button" name="button" class="btn btn-sm btn-danger" (click)="resetForm()">Clear</button> -->
-	<button [disabled]="processing" type="submit" name="save" class="btn btn-sm btn-info">Save Changes</button>
+	<button [disabled]="!form.valid || processing" type="submit" name="save" class="btn btn-sm btn-info">Save Changes</button>
 </form>
